<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Music Library</string>
    <string name="action_settings">Settings</string>
    <string name="edit_folder">sdcard/Music/</string>
    <string name="button_search">Search!</string>
    <string name="action_search">Search</string>
    <string name="button_refresh">Refresh</string>
    <string name="title_activity_debug">DebugActivity</string>
    <string name="cd_cover">cover</string>
    <string name="cd_cover_overlay">cover overlay</string>
    <string name="cd_shuffle">shuffle</string>
    <string name="cd_repeat">repeat</string>
    <string name="tv_time_left">00:00</string>
    <string name="tv_time">00:00</string>
    <string name="cd_previous">previous</string>
    <string name="cd_play">play</string>
    <string name="cd_next">next</string>
    <string name="tv_title">Apotheosis</string>
    <string name="tv_artist">Greendjohn</string>
    <string name="tv_album">String Theory</string>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="addFolderToLibrary">+ Add folder</string>
    <string name="updatingLibrary">Updating library&#8230;</string>
    <string name="action_scan">Scan folders</string>
    <string name="addPlaylist">+ Add Playlist</string>
    <string name="play_all">Play all</string>

</resources>
