<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="?android:attr/actionBarSize"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".DebugActivity" >
	    
	    <EditText
	        android:id="@+id/edit_folder"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/edit_folder"
	        android:text="@string/edit_folder" />
	
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_search"
	        android:onClick="searchFolder" />

	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_refresh"
	        android:onClick="refresh" />
	    
	</LinearLayout>
	
	<TextView 
	    android:id="@+id/textview1"
	    android:layout_height="30dp"
	    android:layout_width="match_parent" />

	<ListView
	    android:id="@+id/lvMenu"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" />

</LinearLayout>
